[gd_scene load_steps=5 format=3 uid="uid://chceaf8tkfpsq"]

[ext_resource type="FontFile" uid="uid://bbpgvbh3ux6wl" path="res://Fonts/Pixellari.ttf" id="1_csxf1"]
[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_t8sry"]

[sub_resource type="FontVariation" id="FontVariation_nbjf2"]
base_font = ExtResource("1_csxf1")

[sub_resource type="FontVariation" id="FontVariation_1njox"]
base_font = ExtResource("1_csxf1")

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_t8sry")

[node name="BackGroundColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0.756863, 0.737255, 1)

[node name="StartButton" type="Button" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = 9.0
offset_right = 67.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.929412, 0.415686, 0.352941, 1)
theme_override_colors/font_hover_color = Color(0.956863, 0.945098, 0.733333, 1)
theme_override_colors/font_focus_color = Color(0.929412, 0.415686, 0.352941, 1)
theme_override_fonts/font = SubResource("FontVariation_nbjf2")
theme_override_font_sizes/font_size = 33
text = "Start Game"

[node name="GameNameLabel" type="Label" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.5
offset_top = -61.0
offset_right = 130.5
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.956863, 0.945098, 0.733333, 1)
theme_override_fonts/font = SubResource("FontVariation_1njox")
theme_override_font_sizes/font_size = 44
text = "Turrets Bluff"

[connection signal="button_up" from="StartButton" to="." method="_on_start_button_button_up"]
